Initial code drop of Python PCEP code
Change-Id: Ia1dcb2e1c432c7b10665d1601603daddfd90b4e7
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/README
+++ b/README
@@ -22,6 +22,12 @@ bgp:
 pcep:
 	PCEP-related artifacts
 
+pcep/pcepy:
+	Python PCEP library
+
+pcep/pcepdump:
+	Python-based PCEP listener and debug tool
+
 
 HOW TO BUILD
 ============
